--- a/client/index.less
+++ b/client/index.less
@@ -3,24 +3,22 @@
   margin: 0;
 }
 
-body, button{
+body{
   font-family: sans-serif;
   font-size: 25px;
   border: 1px solid #918987;
 }
 
 #calculator{
-  width: 240px;
-  height: 320px;
-  margin: 10% auto auto auto;
+  margin-top: 10vh;
 }
 
 #output {
-  width: 231px;
+  // width: 231px;
   height: 80px;
-  position: relative;
+  // position: relative;
   background-color: #918987;
-  border-right: 1px solid #918987;
+  // border-right: 1px solid #918987;
 }
 
 #display {
