--- a/client/index.less
+++ b/client/index.less
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body{
   font-family: sans-serif;
   font-size: 25px;
@@ -10,26 +14,22 @@ body{
 }
 
 #calculator{
-  margin-top: 10vh;
+  margin-top: 9vh;
 }
 
 #output {
-  // width: 231px;
-  height: 80px;
-  // position: relative;
+  height: 15vh;
   background-color: #918987;
-  // border-right: 1px solid #918987;
 }
 
 #display {
   text-align: right;
   color: #FFFFFF;
-  font-size: 50px;
+  font-size: 6rem;
   font-weight: 100;
-  width: 223px;
-  height: 40px;
-  position: absolute;
-  top: 30px;
+  height: 14vh;
+  padding-right: 5px;
+  padding-top: 3vh;
 }
 
 button {
