change button height

--- a/client/index.jade
+++ b/client/index.jade
@@ -20,11 +20,11 @@ html
                   #display 0
           .row
             .col-xs-3
-              #clear AC
+              .number#clear AC
             .col-xs-3
-              #sign &plusmn;
+              .number#sign &plusmn;
             .col-xs-3
-              #percent &#37;
+              .number#percent &#37;
             .col-xs-3
               div.operator &#247;
           .row
@@ -58,9 +58,9 @@ html
             .col-xs-6
               div.number#zero 0
             .col-xs-3
-              div#decimal .
+              div.number#decimal .
             .col-xs-3
-              div#equal = 
+              div.number#equal = 
         .col-xs-2.col-lg-5.col-md-4
 
     script(src='/vendor/jquery/dist/jquery.min.js')
