--- a/client/index.less
+++ b/client/index.less
@@ -32,27 +32,27 @@ body{
   padding-top: 3vh;
 }
 
-button {
-  width: 58px;
-  height: 48px;
-  margin-right: -7px;
+.number {
+  // width: 58px;
+  height: 10vh;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px;
   font-weight: lighter;
   background-color: #DCDCDC;
   color: rgba(84, 103, 112, 0.83);
 }
 
-button:hover {
+.number:hover {
   cursor: pointer;
   background-color: rgba(81, 50, 17, 0.30);
 }
 
-button:focus {outline:0;}
-
-#zero {
-  width: 116px;
-  height: 48px;
-  margin-right: -7px;
-}
+// #zero {
+//   width: 116px;
+//   height: 48px;
+//   margin-right: -7px;
+// }
 
 .operator {
   background-color: #F6872C;
