Center align text

--- a/client/index.less
+++ b/client/index.less
@@ -38,11 +38,13 @@ body{
   font-weight: lighter;
   background-color: #DCDCDC;
   color: rgba(84, 103, 112, 0.83);
+  text-align: center;
 }
 
 .number:hover {
   cursor: pointer;
-  background-color: rgba(81, 50, 17, 0.30);
+  color: red;
+  background-color: rgba(175, 175, 175, 0.95);
 }
 
 // #zero {
@@ -54,6 +56,7 @@ body{
 .operator {
   background-color: #F6872C;
   color: #ffffff;
+  text-align: center;
 }
 
 .operator:hover {
