Vertically align buttons

--- a/client/index.less
+++ b/client/index.less
@@ -39,11 +39,19 @@ body{
   background-color: #DCDCDC;
   color: rgba(84, 103, 112, 0.83);
   text-align: center;
+  padding-top: .65em;
+}
+
+#decimal{
+  padding-top: .45em;
+}
+
+#sign{
+  padding-top: .5em;
 }
 
 .number:hover {
   cursor: pointer;
-  color: red;
   background-color: rgba(175, 175, 175, 0.95);
 }
 
