--- a/client/index.jade
+++ b/client/index.jade
@@ -13,12 +13,12 @@ html
     .container-fluid
       .row
         .col-xs-8.col-xs-offset-2.col-lg-3.col-lg-offset-5.col-md-4.col-md-offset-4
-          .row
+          .row.no-gutter
             .col-xs-12
               #calculator
                 #output
                   #display 0
-          .row
+          .row.no-gutter
             .col-xs-3
               .number#clear AC
             .col-xs-3
@@ -27,7 +27,7 @@ html
               .number#percent &#37;
             .col-xs-3
               div.operator &#247;
-          .row
+          .row.no-gutter
             .col-xs-3
               div.number 7
             .col-xs-3
@@ -36,7 +36,7 @@ html
               div.number 9
             .col-xs-3
               div.operator &times;
-          .row
+          .row.no-gutter
             .col-xs-3
               div.number 4
             .col-xs-3
@@ -45,7 +45,7 @@ html
               div.number 6
             .col-xs-3
               div.operator &#8211;
-          .row
+          .row.no-gutter
             .col-xs-3
               div.number 1
             .col-xs-3
@@ -54,13 +54,13 @@ html
               div.number 3
             .col-xs-3
               div.operator +
-          .row
+          .row.no-gutter
             .col-xs-6
               div.number#zero 0
             .col-xs-3
               div.number#decimal .
             .col-xs-3
-              div.number#equal = 
+              div.operator#equal = 
         .col-xs-2.col-lg-5.col-md-4
 
     script(src='/vendor/jquery/dist/jquery.min.js')
