Got borders just right

--- a/client/index.jade
+++ b/client/index.jade
@@ -20,7 +20,7 @@ html
                   #display 0
           .row.no-gutter
             .col-xs-3
-              .number#clear AC
+              #clear AC
             .col-xs-3
               .number#sign &plusmn;
             .col-xs-3
