--- a/client/index.less
+++ b/client/index.less
@@ -28,19 +28,18 @@ body{
   font-size: 6rem;
   font-weight: 100;
   height: 14vh;
-  padding-right: 5px;
+  padding-right: 0.2em;
   padding-top: 3vh;
 }
 
-.number {
-  // width: 3.1em;
+.number, #clear {
   height: 10vh;
   font-weight: lighter;
   background-color: #DCDCDC;
   color: rgba(84, 103, 112, 0.83);
   text-align: center;
   padding-top: .65em;
-  margin: 0 0 0 0;
+  margin: 0 0 1px 0;
 }
 
 #decimal{
@@ -51,13 +50,12 @@ body{
   padding-top: .5em;
 }
 
-.number:hover {
+.number:hover, #clear:hover {
   cursor: pointer;
   background-color: rgba(175, 175, 175, 0.95);
 }
 
 .operator {
-  // width: 3.1em;
   height: 10vh;
   background-color: #F6872C;
   color: #ffffff;
@@ -82,7 +80,7 @@ body{
 
 .no-gutter [class*="col-"] {
     padding-left: 0 !important;
-    padding-right: 0 !important;
+    padding-right: 1px !important;
 }
 
 body { border-bottom: 0;}
