Remove erroneous classes from some buttons

--- a/client/index.jade
+++ b/client/index.jade
@@ -22,9 +22,9 @@ html
             .col-xs-3
               #clear AC
             .col-xs-3
-              .number#sign &plusmn;
+              #sign &plusmn;
             .col-xs-3
-              .number#percent &#37;
+              #percent &#37;
             .col-xs-3
               div.operator &#247;
           .row.no-gutter
@@ -58,7 +58,7 @@ html
             .col-xs-6
               div.number#zero 0
             .col-xs-3
-              div.number#decimal .
+              div#decimal .
             .col-xs-3
               div.operator#equal = 
         .col-xs-2.col-lg-5.col-md-4
