--- a/client/index.less
+++ b/client/index.less
@@ -32,7 +32,7 @@ body{
   padding-top: 3vh;
 }
 
-.number, #clear {
+.number, #clear, #sign, #percent, #decimal {
   height: 10vh;
   font-weight: lighter;
   background-color: #DCDCDC;
@@ -50,7 +50,7 @@ body{
   padding-top: .5em;
 }
 
-.number:hover, #clear:hover {
+.number:hover, #clear:hover, #sign:hover, #percent:hover, #decimal:hover {
   cursor: pointer;
   background-color: rgba(175, 175, 175, 0.95);
 }
