Fix it so that cannot append digit right after an operation but still can append a decimal.  Needs to fix that later

--- a/client/index.jade
+++ b/client/index.jade
@@ -60,7 +60,7 @@ html
             .col-xs-3
               div#decimal .
             .col-xs-3
-              div.operator#equal = 
+              div#equal = 
         .col-xs-2.col-lg-5.col-md-4
 
     script(src='/vendor/jquery/dist/jquery.min.js')
