Add corner radius to the four corners

--- a/client/index.less
+++ b/client/index.less
@@ -19,6 +19,8 @@ body{
 
 #output {
   height: 15vh;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
   background-color: #918987;
 }
 
@@ -50,6 +52,10 @@ body{
   padding-top: .5em;
 }
 
+#zero{
+  border-bottom-left-radius: 0.5em;
+}
+
 .number:hover, #clear:hover, #sign:hover, #percent:hover, #decimal:hover, #equal:hover {
   cursor: pointer;
   background-color: rgba(175, 175, 175, 0.95);
@@ -71,6 +77,7 @@ body{
 #equal {
   background-color: #F6872C;
   color: #ffffff;
+  border-bottom-right-radius: 0.5em;
 }
 
 #equal:hover{
